--- a/bib.bib
+++ b/bib.bib
@@ -154,6 +154,14 @@ publisher={Now Publishers Inc},
 year={2004}
 }
 
+@book{Zemanian_dist_theory_1965,
+author={A. H. Zemanian}, 
+title={Distribution theory and transform analysis}, 
+series={Dover books on mathematics}, 
+publisher={Dover}, 
+year={1965}
+}
+
 @book{Rogers_packing_and_covering_1964,
 author={C. A. Rogers}, 
 title={Packing and Covering}, 
@@ -202,6 +210,25 @@ MRREVIEWER = {Jack O. Button}
       YEAR = {1971},
     NUMBER = {2},
      PAGES = {264-280}
+}
+
+@article{Preistly_kern_est_1972,
+    AUTHOR = {M. B. Priestley and M. T. Chao},
+     TITLE = {Non-parametric function fitting},
+   JOURNAL = {J. Roy. Statist. Soc. B},
+    VOLUME = 34,
+      YEAR = 1972,
+     PAGES = {385-392}
+}
+
+@article{Gasser_Muller_reg_functs_and_derivs_1984,
+    AUTHOR = {T. Gasser and H. M\"{u}ller},
+     TITLE = {Estimating Regression Functions and Their Derivatives by the Kernel Method},
+   JOURNAL = {Scandinavian Journal of Statistics},
+    VOLUME = 11,
+      YEAR = 1984,
+number=3,
+     PAGES = {171-185}
 }
 
 
@@ -299,6 +326,16 @@ doi={10.1109/26.231921},
 ISSN={0090-6778}
 }
 
+@BOOK{Meyr_synchro_book_1998,
+author={H. Meyr and M. Moeneclaey and S. Fetchel},
+title={Digital Communication Receivers: Synchronization, Channel Estimation and Signal Processing},
+series={Wiley Series in Telecommunications and Signal Processing},
+publisher={Wiley},
+address={New York},
+year={1998}
+}
+
+
 
 @BOOK{Schliegel_Grant_coordinated_mu_2006,
   title = {Coordinated multiuser detection},
@@ -364,6 +401,120 @@ pages={381-391}
  publisher = {ACM},
  address = {New York, NY, USA},
  }
+
+@ARTICLE{Kim_inter_filt_timing_2005, 
+author={Joon Kim}, 
+journal={Consumer Electronics, IEEE Transactions on}, title={Efficient implementation of polynomial interpolation filters for full digital receivers}, 
+year=2005, 
+volume=51, 
+number=1, 
+pages={175-178}, 
+keywords={filtering theory;interpolation;optimisation;polynomials;synchronisation;television receivers;discrete-time sample;full digital receiver;optimization;polynomial interpolation filter;symbol timing recovery system;Constraint optimization;Delay;Digital TV;Digital filters;Finite impulse response filter;Interpolation;Polynomials;TV receivers;Timing;Voltage control}, 
+doi={10.1109/TCE.2005.1405716}, 
+ISSN={0098-3063},}
+
+@INPROCEEDINGS{Tavares_PLL_symb_timer_2000, 
+author={G.N. Tavares and L. Tavares and M. S. Piedade}, 
+booktitle={IEEE International Symposium on Circuits and Systems}, 
+title={A new {ML}-based data-aided feedforward symbol synchronizer for burst-mode transmission}, 
+year=2000,
+volume=2, 
+pages={357-360}, 
+keywords={feedforward;maximum likelihood detection;quadrature phase shift keying;symbol manipulation;synchronisation;telecommunication switching;Cramer-Rao lower bound;ML-based data-aided feedforward symbol synchronizer;QPSK signaling;burst-mode transmission;carrier-phase independent algorithm;linear modulation;narrow-band communication systems;Algorithm design and analysis;Baseband;Communication systems;Delay estimation;Filters;Maximum likelihood detection;Maximum likelihood estimation;Signal processing algorithms;Synchronization;Timing}, 
+doi={10.1109/ISCAS.2000.856335},}
+
+@INPROCEEDINGS{Grimm_real_time_imp_timing_1998, 
+author={J.H. Grimm and R. N. Kumar and J. Kusuma and J. V. Krogmeier}, 
+booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing}, 
+title={Real time implementation of a symbol timing recovery algorithm for a narrowband wireless modem}, 
+year={1998}, 
+volume=6, 
+pages={3253-3256}, 
+keywords={digital filters;land mobile radio;matched filters;modems;radio receivers;real-time systems;synchronisation;trellis coded modulation;220 to 222 MHz;4 kHz;Texas Instruments C54× fixed point digital signal processor;bandwidth efficiency;complexity;experimental nonreal time system;land mobile radio;narrowband wireless modem;pilot symbol assisted modulation;prototype;real time implementation;square symbol timing recovery algorithm;transmitter diversity;trellis coded modulation;Bit rate;Modems;Modulation coding;Narrowband;Prototypes;Real time systems;Signal processing algorithms;System testing;Timing;Transmitters}, 
+doi={10.1109/ICASSP.1998.679558}, 
+ISSN={1520-6149},}
+
+@ARTICLE{Lee_more_feedforward_two_symbol_2002, 
+author={Seung-Joon Lee}, 
+journal={IEEE Communications Letters}, 
+title={A new non-data-aided feedforward symbol timing estimator using two samples per symbol}, 
+year=2002, 
+volume=6, 
+number=5, 
+pages={205-207}, 
+keywords={computational complexity;feedforward;parameter estimation;synchronisation;computational complexity;estimation accuracy;nondata-aided feedforward symbol timing estimator;numerical results;symbol timing recovery;synchronization;two samples per symbol;AWGN;Associate members;Computational complexity;Delay estimation;Finite impulse response filter;Low pass filters;Matched filters;Pulse shaping methods;Signal processing;Timing}, 
+doi={10.1109/4234.1001665}, 
+ISSN={1089-7798},}
+
+@ARTICLE{Wang_alt_lee_sybtiming_2003, 
+author={Yan Wang and E. Serpedin and P. Ciblat}, 
+journal={Communications, IEEE Transactions on}, 
+title={An alternative blind feedforward symbol timing estimator using two samples per symbol}, 
+year={2003.}, 
+volume=51, 
+number=9, 
+pages={1451-1455}, 
+keywords={computational complexity;feedforward;mean square error methods;parameter estimation;signal sampling;statistical analysis;synchronisation;timing;asymptotic bias;blind feedforward symbol timing estimator;blind feedforward timing estimator;closed-form expression;computational complexity;cyclostationary statistics;mean-square error;received oversampled signal;synchronization;Bandwidth;Computational complexity;Computer simulation;Frequency synchronization;Performance analysis;Pulse modulation;Pulse shaping methods;Quadrature amplitude modulation;Sampling methods;Timing}, 
+doi={10.1109/TCOMM.2003.816976}, 
+ISSN={0090-6778},}
+
+@ARTICLE{Herzet_framework_turbo_sync_2007, 
+author={C. Herzet and V. Ramon and L. Vandendorpe}, 
+journal=ieeetsp, 
+title={A Theoretical Framework for Iterative Synchronization Based on the Sum-Product and the Expectation-Maximization Algorithms}, 
+year=2007, 
+volume=55, 
+number=5, 
+pages={1644-1658}, 
+keywords={convolutional codes;error statistics;expectation-maximisation algorithm;mean square error methods;synchronisation;turbo codes;bit-error rate;coded transmission systems;convolutionally coded transmissions;expectation-maximization algorithms;iterative synchronization;maximum-likelihood estimation;mean-square error;sum-product algorithms;turbo-coded transmissions;Algorithm design and analysis;Bit error rate;Convolutional codes;Expectation-maximization algorithms;Iterative algorithms;Iterative methods;Maximum likelihood estimation;Parameter estimation;Timing;Turbo codes;Iterative methods;maximum-likelihood estimation;message passing;synchronization}, 
+doi={10.1109/TSP.2006.890828}, 
+ISSN={1053-587X},}
+
+@ARTICLE{Kim_opt_inter_filter_symbol_timing_1997, 
+author={Daeyoung Kim and M. J. Narasimba and D. C. Cox}, 
+journal={Communications, IEEE Transactions on}, title={Design of optimal interpolation filter for symbol timing recovery}, 
+year=1997, 
+volume=45, 
+number=7, 
+pages={877-884}, 
+keywords={circuit optimisation;digital communication;digital filters;filtering theory;interpolation;minimisation;receivers;signal sampling;timing;tracking;MSE;MSE minimization;analog to digital conversion;digital receiver;input ADC sampling clock;interpolation filter length;linear equations;mean-square error;nonsynchronized input samples;optimal filter coefficients;optimal interpolation filter design;simulation results;symbol synchronizer;symbol timing recovery;symbol tracking performance;timing difference;timing estimation;timing estimation error variance;transmitter symbol clock;Clocks;Digital filters;Equations;Interpolation;Nonlinear filters;Performance analysis;Sampling methods;Synchronization;Timing;Transmitters}, 
+doi={10.1109/26.602593}, 
+ISSN={0090-6778},}
+
+@ARTICLE{YikChung_universal_anal_feedforward_2006, 
+author={Yik-Chung Wu and E. Serpedin}, 
+journal={IEEE Transactions on Wireless Communications}, 
+title={Unified analysis of a class of blind feedforward symbol timing estimators employing second-order statistics}, 
+year=2006, 
+volume=5, 
+number=4, 
+pages={737-742}, 
+keywords={feedforward;filtering theory;least mean squares methods;maximum likelihood estimation;timing;blind feedforward symbol timing estimators;conditional Cramer-Rao bound;feedforward conditional maximum likelihood estimator;mean-square error;second-order statistics;square law nonlinearity estimator;Analytical models;Cramer-Rao bounds;Delay estimation;Helium;Maximum likelihood estimation;Performance analysis;Signal to noise ratio;Statistical analysis;Statistics;Timing}, 
+doi={10.1109/TWC.2006.1618922}, 
+ISSN={1536-1276}
+}
+
+@ARTICLE{Panayirci_eval_per_symbtim_1996, 
+author={E. Panayirci and E. K. Bar-Ness}, 
+journal=ieeetcom, 
+title={A new approach for evaluating the performance of a symbol timing recovery system employing a general type of nonlinearity}, 
+year={1996}, 
+volume=44, 
+number=1, 
+pages={29-33}, 
+keywords={data communication;digital communication;filtering theory;iterative methods;jitter;RMS;digital data transmission systems;even-symmetric zero-memory nonlinear device;exact analytical expressions;high-order moments;input pulse shape;input signal;iterative computations;jitter performance;mean value;mean-square value;narrowband filter;nonlinearity;performance evaluation;postfiltering;power series expansion;pulse repetition frequency;rolloff factor;root mean-square;symbol timing recovery system;system parameters;timing wave;Baseband;Circuits;Computer simulation;Filters;Frequency;Performance analysis;Phase locked loops;Pulse shaping methods;Shape;Timing jitter}, 
+doi={10.1109/26.476093}, 
+ISSN={0090-6778},}
+
+ @ARTICLE{Donoho_wavelet_shrinkage_asymptopia_1995,
+ author = {D. L. Donoho and I. M. Johnstone and G. Kerkyacharian and D. Picard},
+ title = {{Wavelet Shrinkage: Asymptopia?}},
+ journal = {Journal of the Royal Statistical Society. Series B},
+ year = 1995,
+volume=57,
+number=2,
+pages={301-369}
+}
  
  @ARTICLE{AjtaiPublicKeyCryptoLattice1997,
  author = {M. Ajtai and C. Dwork},
@@ -388,6 +539,14 @@ pages={381-391}
   month = {May},
   address = {New York},
   isbn = {0387971270}
+}
+
+@BOOK{Ramsey_Silverman_functional_data_analysis_1997,
+  title = {Functional data analysis},
+  publisher = {Springer},
+  year = 2005,
+  author = {J. Ramsey and B. W. Silverman},
+  edition = {2nd}
 }
 
 @ARTICLE{Stoica_minimisation_EM_2004, 
@@ -544,6 +703,39 @@ volume=1,
 pages={539-560}
 }
 
+@ARTICLE{Funai_Fessler_MRI_regularisation_2008, 
+author={Funai, A.K. and Fessler, J.A. and Yeo, D. and Olafsson, V.T. and Noll, D.C.}, 
+journal={Medical Imaging, IEEE Transactions on}, 
+title={Regularized Field Map Estimation in MRI}, 
+year=2008, 
+volume=27, 
+number=10, 
+pages={1484-1494}, 
+keywords={biomedical MRI;estimation theory;echo-planar imaging;image blurring;image distortion;magnetic resonance imaging;noisy field maps;regularized field map estimation;spiral scans;Biomedical measurements;Cost function;Frequency;Image reconstruction;Magnetic field measurement;Magnetic resonance;Magnetic resonance imaging;Nonlinear distortion;Spirals;Yield estimation;Magnetic field inhomogeneity;No index terms provided;penalized-likelihood estimation;phase unwrapping;regularization;susceptibility;Algorithms;Artificial Intelligence;Brain;Humans;Image Enhancement;Image Interpretation, Computer-Assisted;Imaging, Three-Dimensional;Magnetic Resonance Imaging;Pattern Recognition, Automated;Reproducibility of Results;Sensitivity and Specificity}, 
+doi={10.1109/TMI.2008.923956}, 
+ISSN={0278-0062},}
+
+@ARTICLE{Talagrand_generic_chaining, 
+author={M. Talagrand}, 
+journal={Annals of Probability}, 
+title={Majorizing measures: the generic chaining}, 
+year=1996, 
+volume=24, 
+number=3, 
+pages={1049-1103}
+}
+
+@ARTICLE{6365847, 
+author={T. Routtenberg. and J. Tabrikian}, 
+journal=ieeetsp, 
+title={Non-Bayesian Periodic {Cram\'{e}r-Rao} Bound}, 
+year=2013, 
+volume=61, 
+number=4, 
+pages={1019-1032}, 
+keywords={Bayes methods;Gaussian processes;maximum likelihood estimation;mean square error methods;phase estimation;signal processing;Gaussian problem;Lehmann-unbiasedness;MSPE;maximum likelihood;mean-square-periodic-error;modulo measurements;nonBayesian periodic Cramér-Rao bound;nonBayesian periodic parameter estimation;parameter space;performance analysis;periodic CRB;periodic parameter estimation problems;periodic-unbiased estimator;phase estimation problems;Bayesian methods;Cost function;Maximum likelihood estimation;Performance analysis;Phase estimation;Vectors;Cramér-Rao bound (CRB);Lehmann- unbiased;mean-square-error (MSE);mean-square-periodic-error (MSPE);non-Bayesian parameter estimation;periodic CRB;periodic- unbiased}, 
+doi={10.1109/TSP.2012.2231079}, 
+ISSN={1053-587X},}
 
 @article{AnzinCoxeterCoveringn13n15_2003,
 title={On Lattice Covering Density for $n = 13$ and $n = 15$},
@@ -625,6 +817,13 @@ publisher=cup,
 year=1992
 }
 
+@book{DeGraef_structure_of_materials_2007,
+title={Structure of Materials: An Introduction to Crystallography, Diffraction and Symmetry},
+author={M. De Graef and M. E. McHenry}, 
+publisher=cup,
+year=2007,
+month={Sep.}
+}
 
 @book{Vaidyanthan_multirate_polyphase_1993,
 title={Multirate systems and filter banks},
@@ -1050,6 +1249,17 @@ keywords={8-PSK;PSK signals;QPSK;feedforward structure;maximum-likelihood method
 doi={10.1109/4234.585803}, 
 ISSN={1089-7798},}
 
+@ARTICLE{DAndrea_mod_crb_timing_1994, 
+author={A.N. D'Andrea and U. Mengali and R. Reggiannini}, 
+journal={IEEE Transactions on Communications}, 
+title={The modified Cramer-Rao bound and its application to synchronization problems}, 
+year=1994, 
+volume=42, 
+number=234, 
+pages={1391-1399}, 
+keywords={Clocks;Continuous phase modulation;Cramer-Rao bounds;Detectors;Frequency estimation;Frequency synchronization;Parameter estimation;Phase estimation;Phase modulation;Timing}, 
+doi={10.1109/TCOMM.1994.580247}, 
+ISSN={0090-6778},}
 
 @ARTICLE{Morelli2000_jointphasetimingMSK,
     author = {M. Morelli and G. M. Vitetta},
@@ -1440,6 +1650,30 @@ pages = {61-62},
 year = {1957},
 author = {J. K. MacKenzie},
 }
+
+@ARTICLE{Tavares_true_timing_phase_crbs, 
+author={G. Tavares and L. Tavares and A. Petrolino}, 
+journal={IEEE Transactions on Communications}, 
+title={On the true {Cramer-Rao} lower bound for data-aided carrier-phase-independent frequency offset and symbol timing estimation}, 
+year=2010, 
+volume=58, 
+number=2, 
+pages={442-447}, 
+keywords={AWGN channels;frequency estimation;integration;modulation;phase shift keying;AWGN channel;Cramer-Rao lower bound;M-PSK;carrier-phase-independent estimation;continuous wave signal;data-aided carrier-phase-independent frequency offset;frequency estimation;linearly modulated waveform;nuisance parameter;numerical integration;symbol timing estimation;AWGN channels;Chirp modulation;Digital communication;Frequency estimation;Frequency synchronization;Helium;Maximum likelihood estimation;Passband;Phase estimation;Timing;Carrier-phase-independent estimation;Cramer-Rao lower bound;data aided frequency estimation, synchronization, symbol timing estimation}, 
+doi={10.1109/TCOMM.2010.02.090023}, 
+ISSN={0090-6778},}
+
+@ARTICLE{Steendam_low_snr_crb_timing_2001, 
+author={H. Steendam and M. Moeneclaey}, 
+journal={IEEE Communications Letters}, 
+title={{Low-SNR} limit of the {Cramer-Rao} bound for estimating the time delay of a {PSK, QAM, or PAM} waveform}, 
+year=2001, 
+volume=5, 
+number=1, 
+pages={31-33}, 
+keywords={delay estimation;phase shift keying;pulse amplitude modulation;quadrature amplitude modulation;synchronisation;Cramer-Rao bound;PAM constellation;PSK constellation;QAM constellation;band-limited transmit pulse;closed-form expression;low signal-to-noise ratio;low-SNR limit;noisy linearly modulated signal;nuisance parameters;random carrier phase;random data symbols;time delay estimation;timing recovery algorithms;Closed-form solution;Delay effects;Delay estimation;Phase estimation;Phase modulation;Phase noise;Phase shift keying;Quadrature amplitude modulation;Signal to noise ratio;Timing}, 
+doi={10.1109/4234.901818}, 
+ISSN={1089-7798},}
 
 @ARTICLE{Stephens_vector_correlation1979,
 title = {Vector correlation},
@@ -3248,6 +3482,15 @@ pages={645-658}
      year = 1992,
     }
 
+@INPROCEEDINGS{4129680, 
+author={D. Feng and N. Wu and B. Liu}, 
+booktitle={Signal Processing, 2006 8th International Conference on}, 
+title={A Region-growing Phase Unwrapping Approach Based on Local Frequency Estimation for Interferometric SAR}, 
+year=2006, 
+volume=4, 
+keywords={frequency estimation;image resolution;maximum likelihood estimation;radar imaging;radar interferometry;synthetic aperture radar;ML estimator;high-quality pixels;interferometric SAR;local frequency estimation;low-quality pixels;maximum likelihood estimator;quality map;region-growing phase unwrapping approach;Digital elevation models;Frequency estimation;Interferometry;Laboratories;Maximum likelihood estimation;Phase estimation;Phase measurement;Pixel;Radar signal processing;Synthetic aperture radar}, 
+doi={10.1109/ICOSP.2006.345988},}
+
 @article{Lenth_m_estimator_circ_stat_1981,
  title = {Robust Measures of Location for Directional Data},
      author = {R. V. Lenth},
@@ -3352,6 +3595,37 @@ ISSN={1053-587X}
 year = 2000,
 edition = {2nd} 
 }
+
+@article{Zhou_mr_phase_unwrapping_region_growing_2009,
+author={K. Zhou and M. Zaitsev and S. Bao},
+title={Reliable two-dimensional phase unwrapping method using region growing and local linear estimation},
+journal={Magn Reson Med.},
+year=2009,
+month={Oct.},
+volume={62},
+number=4,
+}
+
+@ARTICLE{673674, 
+author={M. Costantini}, 
+journal={IEEE Trans. Geoscience and Remote Sensing}, 
+title={A novel phase unwrapping method based on network programming}, 
+year=1998, 
+volume=36, 
+number=3, 
+pages={813-821}, 
+keywords={geophysical signal processing;geophysical techniques;radar imaging;remote sensing by radar;synthetic aperture radar;SAR interferometry;function reconstruction;geophysical measurement technique;global minimization problem;interferometric SAR;land surface;neighboring pixel;network programming;network structure;phase difference;phase unwrapping method;radar imaging;radar remote sensing;synthetic aperture radar;terrain mapping;Costs;Fast Fourier transforms;Functional programming;Interferometry;Performance evaluation;Phase estimation;Robustness;Synthetic aperture radar;Testing;Two dimensional displays}, 
+doi={10.1109/36.673674}, 
+ISSN={0196-2892},}
+
+@book{Ghiglia_book_phase_unwrapping_1998,
+  author = {D. C. Ghiglia, M. D. Pritt},
+  title = {Two-Dimensional Phase Unwrapping: Theory, Algorithms, and Software},
+ publisher = wiley,
+year = 1998,
+month={Apr.}
+}
+
 
 @article{mardia_stat_dir_data_jorver_1975,
      title = {Statistics of Directional Data},
@@ -3524,22 +3798,6 @@ year=2012,
 month={Aug},
 }
 
-@unpublished{McKilliam_LSU_polyest_part1_2012,
-author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
-title={Polynomial phase estimation by phase unwrapping 1: Identifiability and strong consistency},
-note={submitted to {IEEE Transactions on Signal Processing}},
-year=2012,
-month={Aug},
-}
-
-@unpublished{McKilliam_LSU_polyest_part2_2012,
-author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson and B. Moran and B. Vellambi},
-title={Polynomial phase estimation by phase unwrapping 2: Asymptotic normality and simulations},
-note={submitted to {IEEE Transactions on Signal Processing}},
-year=2012,
-month={Aug},
-}
-
 @INPROCEEDINGS{McKilliam_short_vectors_first_type_isit_2012, 
 author={R. G. McKilliam and A. Grant}, 
 booktitle={IEEE International Symposium on Information Theory Proceedings (ISIT)}, 
@@ -3550,14 +3808,6 @@ pages={2157-2160},
 keywords={Voronoi first kind lattices;n-dimensional lattice;obtuse superbasis;polynomial time;short vector finding;shortest nonzero Euclidean length;weighted graph;computational complexity;computational geometry;graph theory;lattice theory;vectors;}, 
 doi={10.1109/ISIT.2012.6283833}, 
 ISSN={2157-8095},}
-
-@unpublished{Kodithuwakku_projection_PIC_ICC_2012,
-author={J. Kodithuwakku and N. A. Letzepiz and A. Grant and R. G. McKilliam},
-title={Code-Acquisition via the Projection Method for {CDMA} Systems in High {MAI} Channels},
-note={accepted to the International Conference on Communications (ICC)},
-year=2012,
-month={Jan.}
-}
 
 @ARTICLE{McKilliam_error_prob_An2012, 
 author={R. G. McKilliam and R. Subramanian and E. Viterbo I. V. L. Clarkson}, 
@@ -3644,6 +3894,23 @@ url = {http://www.itee.uq.edu.au/~robertm/papers/ICASSP_SNPE.pdf}
   year = 2009,
 month = {Nov.},
 pages={493-495}
+}
+
+@INPROCEEDINGS{6363913, 
+author={J. Kodithuwakku and N. Letzepis and A. Grant and R. McKilliam}, 
+booktitle={Communications (ICC), 2012 IEEE International Conference on}, 
+title={Code-acquisition via the projection method for {CDMA} systems in high {MAI} channels}, 
+year=2012, 
+pages={2575-2579}, 
+keywords={Monte Carlo methods;channel coding;code division multiple access;interference suppression;multiuser channels;probability;signal detection;CDMA systems;Monte-Carlo simulations;code acquisition;high MAI channels;high multiple access interference;interference cancellation;low SNR conditions;missed detection probability;multiuser CDMA systems;null space;received signal projection method;time offset estimator;Approximation methods;Estimation;Interference;Multiaccess communication;Noise;Receivers;Synchronization}, 
+doi={10.1109/ICC.2012.6363913}, 
+ISSN={1550-3607},}
+
+@UNPUBLISHED{Quinn20013asilomar_period_est,
+  author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
+  title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
+  notes = {accepted to Asilomar Conference on Signals, Systems, and Computers},
+  year = 2013,
 }
 
 @article{McKilliam2010_block_noncoherent_hex,
@@ -4237,6 +4504,25 @@ number=8,
 pages={1231-1234}
 }
 
+@article{Zebker_residue_unwrapping_1998,
+author={H. A. Zebker and Y. Lu},
+title={Phase unwrapping algorithms for radar interferometry: residue-cut, least-squares, and synthesis algorithms},
+year=1998,
+journal={J. Opt.  Soc. Am.},
+volume=15,
+number=3,
+pages={586-598}
+}
+
+@INPROCEEDINGS{839615, 
+author={W. Schwartzkopf and T. E. Milner and J. Ghosh and B. L. Evans and A. C. Bovik}, 
+booktitle={Image Analysis and Interpretation, 2000. Proceedings. 4th IEEE Southwest Symposium}, 
+title={Two-dimensional phase unwrapping using neural networks}, 
+year=2000, 
+pages={274-277}, 
+keywords={feedforward neural nets;learning (artificial intelligence);multilayer perceptrons;optical tomography;radar imaging;synthetic aperture radar;ODT;SAR;feedforward neural network;low-complexity method;multilayer perceptron;one-pass method;optical Doppler tomography;phase ambiguity;phase discontinuity detection;pixel-parallel method;simulated phase images;supervised neural network;synthetic aperture radar;training;two-dimensional phase unwrapping;Adaptive optics;Laser radar;Multilayer perceptrons;Neural networks;Optical computing;Optical imaging;Phase detection;Radar detection;Synthetic aperture radar;Tomography}, 
+doi={10.1109/IAI.2000.839615},}
+
 
 @ARTICLE{Quinn_recent_advances_in_freq_est_2008,
   author = {B. G. Quinn},
@@ -4258,6 +4544,20 @@ pages={1231-1234}
   keywords = {{FFT,frequency} {estimation,Quinn–Fernandes,Zero-padding}},
   url = {http://www.sciencedirect.com/science?_ob=ArticleURL&_udi=B6WDJ-4S9P5PY-1&_user=10&_rdoc=1&_fmt=&_orig=search&_sort=d&view=c&_acct=C000050221&_version=1&_urlVersion=0&_userid=10&md5=1242d9aa5f27431c2d64d131d3a9f7d4}
 }
+
+@ARTICLE{Katkovnik_phasela_2009, 
+author={V. Katkovnik and J. Astola and K. Egiazarian}, 
+journal={IEEE Transactions on Image Processing}, 
+title={Phase Local Approximation ({PhaseLa}) Technique for Phase Unwrap From Noisy Data}, 
+year=2008, 
+month={June}, 
+volume=17, 
+number=6, 
+pages={833-846}, 
+keywords={Additive noise;Image reconstruction;Magnetic field measurement;Optical imaging;Phase estimation;Phase measurement;Phase noise;Polynomials;Signal processing algorithms;Wrapping;Gaussian processes;Newton method;image reconstruction;phase noise;polynomial approximation;regression analysis;Gauss-Newton recursive procedure;confidence interval intersection;local polynomial approximation;mean square method;noisy wrapped phase data;nonparametric regression technique;phase image reconstruction;phase local approximation technique;pointwise estimation;sliding window;Adaptive window size;interferometric imaging;local polynomial approximation (LPA);phase image reconstruction;phase unwrapping;Algorithms;Artifacts;Image Enhancement;Image Interpretation, Computer-Assisted;Reproducibility of Results;Sensitivity and Specificity;}, 
+doi={10.1109/TIP.2008.916046}, 
+ISSN={1057-7149},}
+
 
 @article{Quinn_on_kay_2000,
 author = {B. G. Quinn},
@@ -4577,7 +4877,6 @@ ISSN={0018-9448},}
   year=1979
 }
 
-
 @BOOK{Sage1971,
   title = {Estimation theory with applications to communications and control},
   publisher = {McGraw-Hill},
@@ -4589,7 +4888,7 @@ ISSN={0018-9448},}
 }
 
 @ARTICLE{Slocumb_polynomial_1994,
-  author = {B.J. Slocumb and J. Kitchen},
+  author = {B. J. Slocumb and J. Kitchen},
   title = {A polynomial phase parameter estimation phase unwrapping algorithm},
   journal = procicassp,
   year = 1994,
@@ -4674,6 +4973,14 @@ year = 1980,
     file = {Yokoyama_moment_bound_stat_proc_1980.pdf}
     }
     
+@article{McKilliam_arxiv_pps_unwrapping_2012,
+author={R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
+title={Polynomial phase estimation by phase unwrapping},
+url={http://arxiv.org/abs/1011.1262v2},
+year={2012},
+month={Nov.}
+}
+
 
 @ARTICLE{Shannon1948,
   author = {C. E. Shannon},
@@ -5109,7 +5416,7 @@ school = {Zentrum Mathematik, Technische Universit\"at M\"unchen}
 @ARTICLE{ViterbiViterbi_phase_est_1983, 
 author={ Viterbi, A.}, 
 journal=ieeetit, 
-title={Nonlinear estimation of PSK-modulated carrier phase with application to burst digital transmission}, 
+title={Nonlinear estimation of {PSK}-modulated carrier phase with application to burst digital transmission}, 
 year=1983, 
 month={Jul.}, 
 volume=29, 
