--- a/bib.bib
+++ b/bib.bib
@@ -1,6 +1,3 @@
-This file was created with JabRef 2.2.
-Encoding: Cp1252
-
 @STRING{addwes = {Addison-Wesley}}
 @STRING{amermathsoc = {Amer. Math. Soc.}}
 @STRING{annmathstat = {Ann. Math. Stat.}}
@@ -146,12 +143,118 @@ number=3,
 pages={825-830}
 }
 
+@ARTICLE{Hernandez_rbf_phase_unwrapping_2009,
+title={Radial basis functions for phase unwrapping},
+author={J. V. Hern\'{a}ndez and I. de la Rosa Vargas and E. de la Rosa Miranda},
+journal={Computación y Sistemas},
+year=2010,
+volume=14,
+number=2
+}
+
+@misc{ASRPpromovideo,
+  title = {{The Global Sensor Network - University of South Australia}},
+  howpublished = {\url{http://www.youtube.com/watch?v=m2-VBFL6dzM}},
+  note = {{Published: 18 Jul 2013}}
+}
+
+@article{Lu200762,
+title = "Weighted least-squares phase unwrapping algorithm based on derivative variance correlation map ",
+journal = "Optik - International Journal for Light and Electron Optics ",
+volume = 118,
+number = 2,
+pages = "62-66",
+year = 2007,
+issn = "0030-4026",
+doi = "http://dx.doi.org/10.1016/j.ijleo.2006.01.006",
+url = "http://www.sciencedirect.com/science/article/pii/S0030402606000714",
+author = "Y. Lu and X. Wang and X. Zhang",
+keywords = "Information optics",
+keywords = "Phase unwrapping",
+keywords = "Weighted least-squares",
+keywords = "Quality map "
+}
+
+@ARTICLE{1459899, 
+author={S.B. Kim and Y.S. Kim}, 
+journal={Vision, Image and Signal Processing, IEE Proceedings -}, 
+title={Least squares phase unwrapping in wavelet domain}, 
+year=2005, 
+volume=152, 
+number=3, 
+pages={261-267}, 
+keywords={convergence of numerical methods;discrete wavelet transforms;image representation;image resolution;imaging;least squares approximations;coarse resolution;coherent imaging applications;convergence rate;discrete wavelet transform;fine resolution;least squares phase unwrapping;multiresolution representation;sparse structure;two-dimensional phase unwrapping problems;wavelet domain}, 
+doi={10.1049/ip-vis:20041239}, 
+ISSN={1350-245X},}
+
+@article{Lyuboshenko:02, 
+author = {I. V. Lyuboshenko and H. M\^{a}tre and A. Maruani}, 
+journal = {Appl. Opt.}, 
+keywords = {Fringe analysis; Image reconstruction techniques; Phase retrieval; Remote sensing and sensors ; Interferometry},
+number = 11, 
+pages = {2129--2148}, 
+publisher = {OSA},
+title = {Least-Mean-Squares Phase Unwrapping by Use of an Incomplete Set of Residue Branch Cuts}, 
+volume = 41, 
+month = {Apr},
+year = 2002,
+url = {http://ao.osa.org/abstract.cfm?URI=ao-41-11-2129},
+doi = {10.1364/AO.41.002129},
+abstract = {A new technique for the least-mean-squares (LMS) phase-unwrapping method is developed that incorporates the concept of branch cuts between phase singularities (residues), which are usually associated with the path-following gradient integration technique. These branch cuts are introduced by decomposition of the least-mean-squares unwrapped phase into two separate components. The first results from the transverse part of the wrapped phase gradient, which is induced by residues of the original phase, and the second component is due to a potential component, independent of the residues. This decomposition allows the reconstruction of phase patterns with a high level of accuracy and consistency with the initial (wrapped) phase, even when only partial knowledge of the placement of branch cuts between residues is available. We show how the residue-induced phase, ignored by conventional LMS phase estimators, is reconstructed for a given boundary-value problem. The method is illustrated with interferometric quality-control measurements of optical fiber-connector terminations and also with synthetic aperture radar interferometry. These experiments demonstrate the high accuracy of the method in practical situations in which only a limited number of branch cuts are available.},
+}
+
+
 @book{Viterbo_book_rot_lat_2004,
 author={F. Oggier and E. Viterbo}, 
 title={Algebraic Number Theory and Code Design For Rayleigh Fading Channels}, 
 series={Foundations and Trends in Communications and Information Theory}, 
 publisher={Now Publishers Inc}, 
-year={2004}
+year=2004
+}
+
+@misc{McKilliam_asrp_phase_2012, 
+author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner and I. Land and R. G. McKilliam and A. Pollok and L. Davis}, 
+title = {Communication system and method}, 
+howpublished = {Provisional Patent: AU 2012904130},
+year=2013 
+}
+
+@misc{McKilliam_asrp_phase_patent_2012, 
+author = {R. G. McKilliam and A. Pollok and B. Cowley}, 
+title = {CARRIER PHASE AND AMPLITUDE ESTIMATION FOR PHASE SHIFT KEYING USING PILOTS AND DATA}, 
+howpublished = {Provisional Patent: AU 2012905489},
+year=2013
+}
+
+@ARTICLE{5419953, 
+author={Fertl, P. and Matz, G.}, 
+journal=ieeetsp, 
+title={Channel Estimation in Wireless OFDM Systems With Irregular Pilot Distribution}, 
+year=2010, 
+volume=58, 
+number=6, 
+pages={3180-3194}, 
+keywords={OFDM modulation;channel estimation;gradient methods;iterative methods;mean square error methods;radiocommunication;conjugate gradient iterations;heuristic stopping criterion;irregular pilot distribution;minimum mean square error estimators;multiple-antenna;multiuser OFDM systems;orthogonal frequency division multiplexing;pilot-assisted channel estimation;wireless OFDM systems;Irregular sampling;multiple-input multiple-output (MIMO);multiuser access;orthogonal frequency division multiplexing (OFDM);pilot-assisted channel estimation}, 
+doi={10.1109/TSP.2010.2044254}, 
+ISSN={1053-587X},}
+
+@ARTICLE{Zemen05time-variantchannel,
+    author = {Thomas Zemen and Christoph F. Mecklenbräuker},
+    title = {Time-Variant Channel Estimation Using Discrete Prolate Spheroidal Sequences},
+    journal = ieeetsp,
+    year = 2005,
+    volume = 53,
+    pages = {3597--3607}
+}
+
+@article{arines_phase_unwrap_least_square_poly,
+author={J. Arines},
+title={Least-Squares Modal Estimation of Wrapped Phases: Application to Phase Unwrapping},
+journal={Applied Optics},
+year=2003, 
+volume=42,
+number=17,
+pages={3373-3378}
 }
 
 @book{Zemanian_dist_theory_1965,
@@ -675,7 +778,7 @@ keywords = {blind signal parameter search algorithm,criterion function,determini
 pages = {2721-2732}}
 
 @article{arora_hardness_1993,
-  author = {S. Arora and L. Babai and J. Stern and Z. Sweedyk},
+  author = {Arora, S. and Babai, L. and Stern, J. and Sweedyk, Z.},
   title = {The Hardness of Approximate Optimia in Lattices, Codes, and Systems
 	of Linear Equations},
   booktitle = {{IEEE} Symposium on Foundations of Computer Science},
@@ -685,7 +788,7 @@ pages = {2721-2732}}
 }
 
 @article{Gram_discrete_polys1883,
-author={J. P. Gram},
+author={Gram, J.P.},
 year=1883,
 title={Ueber die Entwickelung reeller Functionen in Reihen mittelst der Methode der kleinsten Quadrate},
 journal={Journal f\"{u}r die reine und angewandte Mathematik},
@@ -694,8 +797,8 @@ pages={41-73}
 }
 
 @article{Chebyshev_discrete_polys1864,
-author={P. Chebyshev},
-year={1864}, 
+author={Chebyshev, P.},
+year=1864, 
 title={Sur l'interpolation}, 
 journal={Zapiski Akademii Nauk},
 number=4, 
@@ -706,7 +809,7 @@ pages={539-560}
 @ARTICLE{Funai_Fessler_MRI_regularisation_2008, 
 author={Funai, A.K. and Fessler, J.A. and Yeo, D. and Olafsson, V.T. and Noll, D.C.}, 
 journal={Medical Imaging, IEEE Transactions on}, 
-title={Regularized Field Map Estimation in MRI}, 
+title={Regularized Field Map Estimation in {MRI}}, 
 year=2008, 
 volume=27, 
 number=10, 
@@ -716,7 +819,7 @@ doi={10.1109/TMI.2008.923956},
 ISSN={0278-0062},}
 
 @ARTICLE{Talagrand_generic_chaining, 
-author={M. Talagrand}, 
+author={Talagrand, M.}, 
 journal={Annals of Probability}, 
 title={Majorizing measures: the generic chaining}, 
 year=1996, 
@@ -728,7 +831,7 @@ pages={1049-1103}
 @ARTICLE{6365847, 
 author={T. Routtenberg. and J. Tabrikian}, 
 journal=ieeetsp, 
-title={Non-Bayesian Periodic {Cram\'{e}r-Rao} Bound}, 
+title={Non-{Bayesian} Periodic {Cram\'{e}r-Rao} Bound}, 
 year=2013, 
 volume=61, 
 number=4, 
@@ -811,10 +914,29 @@ year=1984
 }
 
 @book{numerical_recipes_in_C_1992,
-title={Numerical recipes in C},
+title={Numerical recipes in {C}},
 author={W. H. Press and S. A. Teukolsky and W. T. Vetterling and B. P. Flannery}, 
 publisher=cup,
 year=1992
+}
+
+@ARTICLE{Steendam922765, 
+author={Steendam, H. and Moeneclaey, M.}, 
+journal={IEEE Communications Letters}, 
+title={Low-{SNR} limit of the {Cramer-Rao} bound for estimating the carrier phase and frequency of a {PAM}, {PSK}, or {QAM} waveform}, 
+year=2001, 
+volume=5, 
+number=5, 
+pages={218-220}, 
+keywords={AWGN channels;frequency estimation;phase estimation;phase shift keying;pulse amplitude modulation;quadrature amplitude modulation;random processes;AWGN channel;CRB;Cramer-Rao bound;PAM waveform;PSK waveform;QAM waveform;carrier frequency estimation;carrier phase estimation;closed-form expression;low-SNR limit;low-signal-to-noise ratio;matched filter output samples;noisy linearly modulated signal;observation vector;random data;random data symbols;symbol rate;symbol timing;Chirp modulation;Closed-form solution;Frequency estimation;Matched filters;Phase estimation;Phase modulation;Phase noise;Phase shift keying;Quadrature amplitude modulation;Timing}, 
+doi={10.1109/4234.922765}, 
+ISSN={1089-7798},}
+
+@book{numerical_recipes_in_Cpp_2002,
+title={Numerical recipes in {C++}},
+author={W. H. Press and S. A. Teukolsky and W. T. Vetterling and B. P. Flannery}, 
+publisher=cup,
+year=2002
 }
 
 @book{DeGraef_structure_of_materials_2007,
@@ -939,7 +1061,7 @@ keywords={AWGN;C/N;additive white Gaussian noise;burst frame;burst mode OFDM sig
 doi={10.1109/VETECF.2000.886325},}
 
 @ARTICLE{Pritt_least_squares_phase_unwrapping_1994, 
-author={M.D. Pritt and J.S. Shipman}, 
+author={M. D. Pritt and J. S. Shipman}, 
 journal={IEEE Transactions on Geoscience and Remote Sensing}, 
 title={Least-squares two-dimensional phase unwrapping using {FFT's}}, 
 year=1994, 
@@ -1140,7 +1262,7 @@ year=2003,
 title={Large sample theory of intrinsic
 and extrinsic sample means on manifolds {I}},
 journal={Annals of Statistics},
-vol=31,
+volume=31,
 number=1, 
 pages={1-29}
 }
@@ -1151,7 +1273,7 @@ year=2005,
 title={Large sample theory of intrinsic
 and extrinsic sample means on manifolds {II}},
 journal={Annals of Statistics},
-vol=33,
+volume=33,
 number=3, 
 pages={1225-1259}
 }
@@ -1221,8 +1343,8 @@ year=1980,
 month={Aug.}, 
 volume=28, 
 number=8, 
-pages={ 1107-1121}, 
-keywords={ APK communication; PAM communication; Synchronization;}, 
+pages={1107-1121}, 
+keywords={APK communication; PAM communication; Synchronization;}, 
 doi={10.1109/TCOM.1980.1094775}, 
 ISSN={0090-6778}}
 
@@ -1234,6 +1356,20 @@ volume=95,
 number=7,
 month={July},
 year=2007
+}
+
+@book{Mengali_andre_synchro_book,
+  author = {U. Mengali and A. N. D'Andrea},
+  title = {Synchronization Techniques for Digital Receivers},
+publisher=Springer, 
+  year=1997
+}
+
+@book{Hannan_statistical_theory_of_linear_systems,
+  author = {E. J. Hannan and M. Deistler},
+  title = {The statistical theory of linear systems},
+publisher=Wiley, 
+  year=1988
 }
 
 @ARTICLE{Morelli_symbtime_feedforward_1997, 
@@ -1252,7 +1388,7 @@ ISSN={1089-7798},}
 @ARTICLE{DAndrea_mod_crb_timing_1994, 
 author={A.N. D'Andrea and U. Mengali and R. Reggiannini}, 
 journal={IEEE Transactions on Communications}, 
-title={The modified Cramer-Rao bound and its application to synchronization problems}, 
+title={The modified {Cram\'{e}r-Rao} bound and its application to synchronization problems}, 
 year=1994, 
 volume=42, 
 number=234, 
@@ -1478,6 +1614,25 @@ year=1979
   year = 2009,
   volume = 31,
 number=10
+}
+
+@article{Wu_math_prob_fibre_xray_1972,
+title={Some mathematical problems in fibre {X-ray} crystallography},
+author={T. Wu},
+journal={SIAM Review},
+volume=14,
+number=3,
+year=1972,
+month={Jul.}
+}
+
+@article{Bragg_refl_xray_crys_1913,
+author={W. H. Bragg}, 
+title={The reflection of {X-rays} by crystals}, 
+journal={Proc. Roy. Soc. London Ser. A}, 
+volume=89,
+year={1913}, 
+pages={246-248}
 }
 
 @ARTICLE{Buda1989_some_opt_codes_structure,
@@ -1804,6 +1959,54 @@ file = {vaughan_clarkson_thesis.pdf}
   pages = {1264-1268},
   month = {May},
 }
+
+@ARTICLE{476442, 
+author={Guanghan Xu and Hui Liu and Lang Tong and Kailath, T.}, 
+journal=ieeetsp, 
+title={A least-squares approach to blind channel identification}, 
+year=1995, 
+volume=43, 
+number=12, 
+pages={2982-2993}, 
+keywords={Hankel matrices;equalisers;identification;least squares approximations;signal sampling;statistical analysis;telecommunication channels;Hankel matrix;blind channel identification;communication channel;equalisation;least-squares approach;multichannel FIR systems;necessary and sufficient identifiability conditions;system input;system output;unknown deterministic signal;Adaptive equalizers;Blind equalizers;Contracts;Finite impulse response filter;Higher order statistics;PROM;Power engineering and energy;Signal processing;System identification;US Government}, 
+doi={10.1109/78.476442}, 
+ISSN={1053-587X}}
+
+@ARTICLE{6111319, 
+author={M. Rupp}, 
+journal=ieeetsp, 
+title={Robust Design of Adaptive Equalizers}, 
+year=2012, 
+volume=60, 
+number=4, 
+pages={1612-1626}, 
+keywords={MIMO communication;adaptive equalisers;channel estimation;intersymbol interference;iterative methods;least mean squares methods;stochastic processes;MIMO channels;MMSE equalizer;adaptive equalizers;blind channel estimation;intersymbol interference;iterative algorithm;linear reference model;minimum mean square error;multiple-input multiple-output channels;multiuser transmissions;quadratic Wiener cost functions;recursive algorithm;signal- to-noise energy ratio;zero forcing equalizers;Adaptive equalizers;Channel estimation;Compounds;MIMO;Robustness;Vectors;$l_{2}$-stability;Blind channel estimation;convergence;iterative adaptive filters;least mean squares;linear equalizers;minimum mean square error (MMSE);recursive adaptive filters;reference modeling;robustness;zero forcing (ZF)}, 
+doi={10.1109/TSP.2011.2180717}, 
+ISSN={1053-587X},}
+
+@ARTICLE{720247, 
+author={Lang Tong and S. Perreau}, 
+journal={Proceedings of the IEEE}, 
+title={Multichannel blind identification: from subspace to maximum likelihood methods}, 
+year=1998, 
+volume=86, 
+number=10, 
+pages={1951-1968}, 
+keywords={deterministic algorithms;identification;maximum likelihood estimation;signal processing;statistical analysis;telecommunication channels;blind channel estimation algorithms;deterministic signal models;identifiability conditions;maximum likelihood methods;multichannel blind identification;performance;second-order moment-based methods;signal processing;statistical signal models;subspace methods;Blind equalizers;Computer networks;HDTV;Maximum likelihood estimation;Mobile communication;Signal processing;Signal processing algorithms;System identification;Throughput;Wireless communication}, 
+doi={10.1109/5.720247}, 
+ISSN={0018-9219},}
+
+@ARTICLE{1096163, 
+author={A. Benveniste and M. Goursat}, 
+journal=ieeetcom, 
+title={Blind Equalizers}, 
+year=1984, 
+volume=32, 
+number=8, 
+pages={871-883}, 
+keywords={Equalizers;Algorithm design and analysis;Amplitude modulation;Automatic testing;Blind equalizers;Computational complexity;Data communication;Decoding;Digital communication;Phase estimation;Stochastic systems}, 
+doi={10.1109/TCOM.1984.1096163}, 
+ISSN={0090-6778},}
 
 @ARTICLE{Clarkson1994AnalysisKaysVariance,
 title={Analysis of the variance threshold of Kay's weighted linear predictor frequency estimator},
@@ -3752,6 +3955,17 @@ issue={1},
 pages={525-547}
 }
 
+@article{McKilliam_Pollock_CRB_polyphase_2013,
+author={R. McKilliam and A. Pollok},
+title={On the {Cram\'{e}r–Rao} bound for polynomial phase signals},
+journal={Signal Processing},
+volume=95,
+pages={27-31},
+year=2014,
+month={Feb.},
+doi={10.1016/j.sigpro.2013.08.007}
+}
+
 @article{McKilliam_mean_dir_est_sq_arc_length2010,
 author={R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
 title={Direction estimation by minimum squared arc length},
@@ -3764,31 +3978,105 @@ month={May},
 doi={10.1109/TSP.2012.2186444}
 }
 
+@ARTICLE{1200182, 
+author={Noels, N. and Steendam, H. and Moeneclaey, M.}, 
+journal={Communications Letters, IEEE}, 
+title={The {Cram\'{e}r-Rao} bound for phase estimation from coded linearly modulated signals}, 
+year=2003, 
+volume=7, 
+number=5, 
+pages={207-209}, 
+keywords={channel coding;interleaved codes;iterative methods;modulation coding;phase estimation;APP;BCJR algorithm;Bahl-Cocke-Jelinke-Raviv algorithm;CRB;Cramer-Rao bound;bit interleaved coded modulation;block codes;channel coding;classical codes;coded linearly modulated signals;coded symbols;convolutional codes;encoded data symbols;interleaving;iterated application;marginal posteriori probabilities;noisy linearly modulated signal;phase estimation;trellis-coded modulation;turbo codes;Convolutional codes;Filters;Interleaved codes;Modulation coding;Parameter estimation;Phase estimation;Phase modulation;Phase noise;Quadrature phase shift keying;Turbo codes}, 
+doi={10.1109/LCOMM.2003.812168}, 
+ISSN={1089-7798},}
+
+@ARTICLE{1542484, 
+author={Noels, N. and Steendam, H. and Moeneclaey, M. and Bruneel, H.}, 
+journal={Signal Processing, IEEE Transactions on}, 
+title={Carrier phase and frequency estimation for pilot-symbol assisted transmission: bounds and algorithms}, 
+year=2005, 
+volume=53, 
+number=12, 
+pages={4578-4587}, 
+keywords={data communication;frequency estimation;iterative methods;phase estimation;signal processing;synchronisation;Cramer-Rao lower bound;carrier phase estimation;data modulation scheme;frequency offset estimation;iterative soft-decision-directed estimation;noisy linearly modulated burst signal;pilot symbol;pilot-symbol assisted transmission;random data symbol;signal-to-noise ratio;Chirp modulation;Decision support systems;Frequency estimation;Frequency synchronization;Parameter estimation;Phase detection;Phase estimation;Phase modulation;Phase noise;Signal to noise ratio;Carrier synchronization;Cramer–Rao bound;frequency estimation;phase estimation}, 
+doi={10.1109/TSP.2005.859318}, 
+ISSN={1053-587X},}
+
+@ARTICLE{1299073, 
+author={Noels, N. and Steendam, H. and Moeneclaey, M.}, 
+journal={Communications, IEEE Transactions on}, 
+title={The true {Cram\'{e}r-Rao} bound for carrier frequency estimation from a {PSK} signal}, 
+year=2004, 
+volume=52, 
+number=5, 
+pages={834-844}, 
+keywords={frequency estimation;phase estimation;phase shift keying;Cramer-Rao bound;PSK signal;carrier frequency estimation;phase estimation;phase shift keying signal;signal to noise ratio;Chirp modulation;Delay estimation;Frequency estimation;Frequency synchronization;Impedance matching;Phase estimation;Phase shift keying;Quadrature amplitude modulation;Quadrature phase shift keying;Signal to noise ratio;CRB;Cramer–Rao bound;carrier synchronization;frequency estimation}, 
+doi={10.1109/TCOMM.2004.826244}, 
+ISSN={0090-6778},}
+
 @unpublished{McKilliam_leastsqPSKpilotsdata_2012,
-author={R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
+author={R. G. McKilliam and A. Pollok and B. Cowley and V. Clarkson and B. Quinn},
 title={Carrier phase and amplitude estimation for phase shift keying using pilots and data},
-note={submitted to IEEE Transactions on Signal Processing},
+note={submitted to IEEE Transactions on Signal Processing, preprint available http://arxiv.org/abs/1301.1760},
 year=2013,
 month={Jan.}
 }
 
-@unpublished{McKilliam_leastsqPSKnoncoICASSP_2012,
+@unpublished{McKilliam_time_offset_pilots_data_2013,
+author={R. G. McKilliam and A. Pollok and B. Cowley},
+title={Time offset estimation using pilots and data},
+note={submitted to IEEE Transactions on Communications},
+year=2013,
+month={Mar.}
+}
+
+@INPROCEEDINGS{McKilliam_leastsqPSKnoncoICASSP_2012,
 author={R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
 title={Noncoherent least squares estimators of carrier phase and amplitude},
-note={accepted to {IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
+booktitle={{IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
 year=2013,
-month={May}
+month={May},
+pages={4888-4892}
 }
 
 @INPROCEEDINGS{Quinn_sparse_noisy_SSP_2012, 
 author={B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam}, 
-booktitle={IEEE Statistical Signal Processing Workshop (SSP)}, 
+booktitle={{IEEE} Statistical Signal Processing Workshop {(SSP)}}, 
 title={Estimating period from sparse, noisy timing data}, 
 year=2012, 
 month={Aug.}, 
 pages={193-196}, 
 doi={10.1109/SSP.2012.6319657}
 }
+
+@INPROCEEDINGS{MatzFranz_tvchannel_06, 
+author={G. Matz and F. Hlawatsch}, 
+booktitle={Proc. {EUSIPCO}, {Florence}, {Italy}}, 
+title={TIME-VARYING COMMUNICATION CHANNELS: FUNDAMENTALS,
+RECENT DEVELOPMENTS, AND OPEN PROBLEMS}, 
+year=2006, 
+month={Sept.}
+}
+
+@BOOK{inthft:204506,
+	author = {F.~Hlawatsch and  G.~Matz},
+	title = {Wireless Communications over Rapidly Time-Varying Channels},
+	publisher = {Academic Press},
+	year = 2011,
+	address = {Amsterdam, The Netherlands}
+}
+
+@ARTICLE{4155660, 
+author={Mai, N. and Zakharov, Y.V. and Burr, A.G.}, 
+journal=ieeetwc, 
+title={Iterative Channel Estimation Based on {B}-splines for Fast Flat Fading Channels}, 
+year=2007, 
+volume=6, 
+number=4, 
+pages={1224-1229}, 
+keywords={Wiener filters;channel estimation;error statistics;fading channels;iterative methods;least mean squares methods;signal sampling;splines (mathematics);B-splines;BER;MMSE;Wiener filter;cubic local splines;fast flat fading channels;integral sampling;iterative channel estimation;minimum mean square error;sampling interval;signal-to-noise ratio;spheroidal basis expansion;spline order;Bit error rate;Channel estimation;Fading;Frequency estimation;Mean square error methods;Polynomials;Sampling methods;Signal to noise ratio;Spline;Wiener filter}, 
+doi={10.1109/TWC.2007.348317}, 
+ISSN={1536-1276},}
 
 @unpublished{McKilliam_polycrbs_2012,
 author={R. G. McKilliam and A. Pollok},
@@ -3909,7 +4197,7 @@ ISSN={1550-3607},}
 @UNPUBLISHED{Quinn20013asilomar_period_est,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
-  notes = {accepted to Asilomar Conference on Signals, Systems, and Computers},
+  note = {accepted to Asilomar Conference on Signals, Systems, and Computers},
   year = 2013,
 }
 
@@ -4077,6 +4365,13 @@ pages={1426-1430}
   author={Minkowski, H.},
   year=1910,
   publisher={BG Teubner Leipzig}
+}
+
+@book{Scharf_stat_sig_proc_1991,
+  title={Statistical Signal Processing: Detection, Estimation, and Time Series Analysis},
+  author={L. L. Scharf},
+  year=1991,
+  publisher={Addison-Wesley}
 }
 
 
@@ -4330,7 +4625,7 @@ year={1974}
 
 @ARTICLE{Peleg1991_CRB_PPS_1991,
   author = {S. Peleg and B. Porat},
-  title = {The {Cram\`{e}r-Rao} lower bound for signals with constant amplitude
+  title = {The {Cram\'{e}r-Rao} lower bound for signals with constant amplitude
 	and polynomial phase},
   journal = ieeetsp,
   year = 1991,
