--- a/robby.bib
+++ b/robby.bib
@@ -10,6 +10,31 @@
 
 @string{procicassp = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}}
 
+@misc{McKilliam_asrp_phase_2012,
+  author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner and I. Land and R. G. McKilliam and A. Pollok and L. Davis},
+  title = {Communication system and method},
+  howpublished = {Provisional Patent: AU 2012904130},
+  year = 2013
+}
+
+@misc{McKilliam_asrp_phase_patent_2012,
+  author = {R. G. McKilliam and A. Pollok and B. Cowley},
+  title = {CARRIER PHASE AND AMPLITUDE ESTIMATION FOR PHASE SHIFT KEYING USING PILOTS AND DATA},
+  howpublished = {Provisional Patent: AU 2012905489},
+  year = 2013
+}
+
+@article{McKilliam_Pollock_CRB_polyphase_2013,
+  author = {R. McKilliam and A. Pollok},
+  title = {On the {Cram\'{e}r–Rao} bound for polynomial phase signals},
+  journal = {Signal Processing},
+  volume = 95,
+  pages = {27-31},
+  year = 2014,
+  month = {Feb.},
+  doi = {10.1016/j.sigpro.2013.08.007}
+}
+
 @article{McKilliam_mean_dir_est_sq_arc_length2010,
   author = {R. G. McKilliam and B. G. Quinn and I. V. L. Clarkson},
   title = {Direction estimation by minimum squared arc length},
@@ -23,24 +48,33 @@
 }
 
 @unpublished{McKilliam_leastsqPSKpilotsdata_2012,
-  author = {R. G. McKilliam and Andre Pollok and Bill Cowley and Vaughan Clarkson and Barry Quinn},
+  author = {R. G. McKilliam and A. Pollok and B. Cowley and V. Clarkson and B. Quinn},
   title = {Carrier phase and amplitude estimation for phase shift keying using pilots and data},
-  note = {submitted to IEEE Transactions on Signal Processing},
+  note = {submitted to IEEE Transactions on Signal Processing, preprint available http://arxiv.org/abs/1301.1760},
   year = 2013,
   month = {Jan.}
 }
 
-@unpublished{McKilliam_leastsqPSKnoncoICASSP_2012,
+@unpublished{McKilliam_time_offset_pilots_data_2013,
+  author = {R. G. McKilliam and A. Pollok and B. Cowley},
+  title = {Time offset estimation using pilots and data},
+  note = {submitted to IEEE Transactions on Communications},
+  year = 2013,
+  month = {Mar.}
+}
+
+@inproceedings{McKilliam_leastsqPSKnoncoICASSP_2012,
   author = {R. G. McKilliam and A. Pollok and B. Cowley and I. V. L. Clarkson and B. Quinn},
   title = {Noncoherent least squares estimators of carrier phase and amplitude},
-  note = {accepted to {IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
+  booktitle = {{IEEE} Internat. Conf. Acoust. Spe. Sig. Process.},
   year = 2013,
-  month = {May}
+  month = {May},
+  pages = {4888-4892}
 }
 
 @inproceedings{Quinn_sparse_noisy_SSP_2012,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
-  booktitle = {IEEE Statistical Signal Processing Workshop (SSP)},
+  booktitle = {{IEEE} Statistical Signal Processing Workshop {(SSP)}},
   title = {Estimating period from sparse, noisy timing data},
   year = 2012,
   month = {Aug.},
@@ -165,7 +199,7 @@
 @unpublished{Quinn20013asilomar_period_est,
   author = {B. G. Quinn and I. V. L. Clarkson and R. G. McKilliam},
   title = {On the Periodogram Estimator of Period from Sparse, Noisy Timing Data},
-  notes = {accepted to Asilomar Conference on Signals, Systems, and Computers},
+  note = {accepted to Asilomar Conference on Signals, Systems, and Computers},
   year = 2013
 }
 
