--- a/bib.bib
+++ b/bib.bib
@@ -132,6 +132,18 @@ doi={10.1109/18.771234},
 ISSN={0018-9448}
 }
 
+@ARTICLE{Wubben_2011, 
+author={Wubben, D. and Seethaler, D. and Jalden, J. and Matz, G.}, 
+journal={IEEE Signal Processing Magazine}, 
+title={Lattice Reduction}, 
+year=2011, 
+volume=28, 
+number=3, 
+pages={70-91}, 
+keywords={computational complexity;lattice theory;radiocommunication;signal processing;GPS;JPEG pictures;color space estimation;computational complexity;data detection;frequency estimation;global positioning system;lattice reduction;point lattices;precoding;signal processing applications;statistical signal processing;wireless communication systems;wireless communications;Image color analysis;Lattices;MIMO;Receiving antennas;Signal processing algorithms;Transmitting antennas;Wireless communication}, 
+doi={10.1109/MSP.2010.938758}, 
+ISSN={1053-5888},}
+
 @ARTICLE{Viterbo_SLB_fadinglattice_const_2008,
 title={Sphere Lower Bound for Rotated Lattice Constellations in Fading Channels},
 author={A. Guill\'{e}n i F\`{a}bregas and E. Viterbo},
@@ -212,6 +224,16 @@ publisher={Now Publishers Inc},
 year=2004
 }
 
+@INPROCEEDINGS{6510040, 
+author={Kodithuwakku, J. and Letzepis, N. and Grant, A. and McKilliam, R.}, 
+booktitle={Communications Theory Workshop (AusCTW), 2013 Australian}, 
+title={Decoder-aided synchronization for multiuser {CDMA} systems}, 
+year=2013, 
+pages={31-36}, 
+month={Jan.},
+keywords={Monte Carlo methods;code division multiple access;decoding;interference suppression;iterative methods;probability;radiofrequency interference;synchronisation;Monte-Carlo simulations;code division multiple access systems;data-aided scenario;decoder iterations;decoder-aided synchronization;frame synchronization;linear pre-processing;missed detection probability;multiple access interference mitigation;multiuser CDMA systems;nondata-aided scenario;partial interference cancellation;residual interference;soft information;time offset estimator;user signals}, 
+doi={10.1109/AusCTW.2013.6510040},}
+
 @misc{McKilliam_asrp_phase_2012, 
 author = {A. Grant and B. Cowley and D. Haley and A. Barbulescu and G. Lechner and I. Land and R. G. McKilliam and A. Pollok and L. Davis}, 
 title = {Communication system and method}, 
@@ -247,6 +269,15 @@ ISSN={1053-587X},}
     pages = {3597--3607}
 }
 
+@ARTICLE{Gardner97discretetomography,
+    author = {R. J. Gardner and P. Gritzmann},
+    title = {Discrete tomography: determination of finite sets by {X-rays}},
+    journal = {Trans. Amer. Math. Soc},
+    year = 1997,
+    volume = 349,
+    pages = {2271-2295}
+}
+
 @article{arines_phase_unwrap_least_square_poly,
 author={J. Arines},
 title={Least-Squares Modal Estimation of Wrapped Phases: Application to Phase Unwrapping},
@@ -271,6 +302,33 @@ title={Packing and Covering},
 series={Cambridge Tracts in Mathematics and Mathematical Physics}, 
 publisher=cup, 
 year=1964
+}
+
+@inproceedings{Goldberg:1986:NAM:12130.12144,
+ author = {Goldberg, A V and Tarjan, R E},
+ title = {A New Approach to the Maximum Flow Problem},
+ booktitle = {Proceedings of the Eighteenth Annual ACM Symposium on Theory of Computing},
+ series = {STOC '86},
+ year = 1986,
+ isbn = {0-89791-193-8},
+ location = {Berkeley, California, USA},
+ pages = {136--146},
+ numpages = 11,
+ url = {http://doi.acm.org/10.1145/12130.12144},
+ doi = {10.1145/12130.12144},
+ acmid = 12144,
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@article{EdmondsKarp_max_flow,
+author={J. Edmonds and R. M. Karp}, 
+title="Theoretical improvements in algorithmic efficiency for network flow problems",
+journal={Journal of the {ACM}},
+volume= 19,
+number=2,
+year= 1972, 
+pages={248-264}
 }
 
 @ARTICLE{Alekhnovich_divide_conque_RS_poly_interp_2005, 
@@ -400,6 +458,16 @@ pages={1426-1428},
 keywords={Gaussian channel;capacity;finite number of input levels;channel capacity;information theory;}, 
 doi={10.1109/18.59937}, 
 ISSN={0018-9448},}
+
+@ARTICLE{Shalvi_iterativeslicer_2009, 
+author={N. Sommer and M. Feder and O. Shalvi}, 
+journal={{SIAM J. Discrete Math.}}, 
+title={FINDING THE CLOSEST LATTICE POINT BY ITERATIVE SLICING}, 
+year=2009,  
+volume=23, 
+number=2, 
+pages={715-731}, 
+}
 
 @ARTICLE{Gardner_interp_digicomms_1993, 
 author={F. M. Gardner}, 
@@ -849,6 +917,18 @@ number=5,
 year=2006, 
 pages={721–725}
 }
+
+@ARTICLE{OShea_CPF_2004, 
+author={O'Shea, P.}, 
+journal={Signal Processing, IEEE Transactions on}, 
+title={A fast algorithm for estimating the parameters of a quadratic {FM} signal}, 
+year={2004}, 
+volume={52}, 
+number={2}, 
+pages={385-393}, 
+keywords={maximum likelihood estimation;mean square error methods;signal processing;3D grid search;SNR;frequency modulated;mean-square-error;optimal maximum likelihood method;parameter estimation;quadratic FM signal;signal-to-noise ratio;Amplitude estimation;Frequency estimation;Frequency modulation;Gaussian noise;Maximum likelihood estimation;Parameter estimation;Passive radar;Phase estimation;Signal processing;Signal processing algorithms}, 
+doi={10.1109/TSP.2003.821097}, 
+ISSN={1053-587X},}
 
 @ARTICLE{Farquharson_CPF_2007, 
 author={M. Farquharson and P. O'Shea}, 
@@ -3198,14 +3278,24 @@ ISSN={1053-587X}
 
 @ARTICLE{Hassibi_GPS_1998,
   author = {A. Hassibi and S. P. Boyd},
-  title = {Integer parameter estimation in linear models with applications to GPS},
+  title = {Integer parameter estimation in linear models with applications to {GPS}},
   journal = ieeetsp,
-  year = {1998},
-  volume = {46},
-  number = {11},
+  year = 1998,
+  volume = 46,
+  number = 11,
   pages = {2938-2952},
   month = {Nov.}
 }
+
+@INPROCEEDINGS{LingBelfiore_lattice_code_capacity_no_dither_2013, 
+author={Cong Ling and Belfiore, J.-C.}, 
+booktitle={Information Theory Proceedings (ISIT), 2013 IEEE International Symposium on}, 
+title={Achieving the AWGN channel capacity with lattice Gaussian coding}, 
+year=2013, 
+pages={1416-1420}, 
+keywords={AWGN channels;encoding;mean square error methods;AWGN channel capacity;MMSE lattice decoding;additive white Gaussian noise;coding scheme;discrete Gaussian distribution;flatness factor;lattice Gaussian coding;minimum mean-square error;signal-to-noise ratio SNR;AWGN channels;Decoding;Encoding;Error probability;Gaussian distribution;Lattices;Signal to noise ratio}, 
+doi={10.1109/ISIT.2013.6620460}, 
+ISSN={2157-8095},}
 
 @book{Hatcher_algebraic_topology_2002,
   author={A. Hatcher},
@@ -3427,6 +3517,26 @@ url = {http://link.aip.org/link/?SMJ/8/499/1},
 doi = {10.1137/0208040}
 }
 
+@INPROCEEDINGS{NyguyenStern_two_faces_crypto,
+author={P. Nguyen and J. Stern},
+title={The two faces of lattices in cryptology},
+booktitle={{CaLC '01 volume 2146 of LNCS}}, 
+pages={146-180}, 
+publisher=Springer,
+month={Mar.},
+year=2001,
+}
+
+@article{Joux_toolbox_cryptanal1998,
+author={A. Joux and J. Stern}, 
+title={Lattice reduction: A toolbox for the cryptanalyst},
+journal={Journal of Cryptology},
+volume=11,
+number=3,
+pages={161-185}, 
+year=1998
+}
+
 @ARTICLE{Kannan1987_fast_general_np,
   author = {R. Kannan},
   title = {Minkowski's Convex Body Theorem and Integer Programming},
@@ -3564,6 +3674,17 @@ number=4,
   pages = {407-411},
   owner = {Robby},
   timestamp = {2008.06.09}
+}
+
+@article{Lenstra_integerprogramming1983,
+author={H. W. Lenstra}, 
+title={Integer programming with a fixed number of variables}, 
+journal={Mathematics of Operations Research}, 
+volume=8,
+number=4,
+pages={538-548}, 
+month={Nov.},
+year=1983
 }
 
 @ARTICLE{Lenstra1982,
@@ -3790,6 +3911,42 @@ ISSN={1053-587X}
   owner = {Robby},
   timestamp = {2008.06.09}
 }
+
+@ARTICLE{Juppfiitingsmoothpathsspheres,
+  author = {P. E. Jupp and  J. T. Kent},
+  title = {Fitting smooth paths to spherical data},
+  journal = {Journal of the Royal Statistical Society. Series C (Applied Statistics)},
+  year = 1987,
+  volume = 36,
+  pages = {34-46},
+  number = 1
+}
+
+@article{Craven_Wahbda_smoothing_spline_cross_val_1979,
+year=1978,
+issn={0029-599X},
+journal={Numerische Mathematik},
+volume=31,
+number=4,
+doi={10.1007/BF01404567},
+title={Smoothing noisy data with spline functions},
+url={http://dx.doi.org/10.1007/BF01404567},
+publisher={Springer-Verlag},
+keywords={MOS:65D10; CR:5.17; MOS:65D25},
+author={Craven, P. and Wahba, G.},
+pages={377-403},
+language={English}
+}
+
+@ARTICLE{Reinsch_splines_classic,
+  author = {C. H. Reinsch},
+  title = {Smoothing by Spline Functions},
+  journal = {Numerische Mathematik},
+  year = 1967,
+  volume = 10,
+  pages = {177-183},
+}
+
 
 @book{Mardia_directional_statistics,
   author = {K. V. Mardia and P. Jupp},
@@ -5092,7 +5249,7 @@ ISSN={0018-9448}, }
 	M. L. Honig},
   title = {{QAM} Codebooks for Low-Complexity Limited Feedback {MIMO} Beamforming},
   journal = {IEEE Int. Conf. Commun.},
-  year = {2007},
+  year = 2007,
   pages = {4162-4167},
   month = {June},
   booktitle = {IEEE International Conference on Communications},
@@ -5101,18 +5258,17 @@ ISSN={0018-9448}, }
   timestamp = {2007.10.24}
 }
 
-@UNPUBLISHED{Ryan2008,
-  author = {D. J. Ryan and I. V. L. Clarkson and I. B. Collings and R. W. {Heath
-	Jr.}},
-  title = {Performance of vector perturbation multiuser {MIMO} systems with
-	limited feedback},
-  note = {Accepted for \emph{IEEE Trans. Commun.}},
-  year = {2008},
-  month = {September},
-  journal = {Accepted for  \emph{IEEE Trans. Commun.}},
-  owner = {Robby},
-  timestamp = {2008.02.18}
-}
+@ARTICLE{Ryan2008, 
+author={Ryan, D.J. and Collings, I.B. and Clarkson, I. V L and Heath, R.W.}, 
+journal=ieeetcom, 
+title={Performance of vector perturbation multiuser {MIMO} systems with limited feedback}, 
+year=2009, 
+volume=57, 
+number=9, 
+pages={2633-2644}, 
+keywords={Rayleigh channels;broadcast channels;multiuser channels;rate distortion theory;transmitting antennas;Rayleigh fading broadcast channel;multiuser MIMO systems;rate-distortion theory;transmit antennas;vector perturbation;Australia;Broadcasting;Feedback;Lattices;MIMO;Performance analysis;Rate-distortion;Rayleigh channels;Transmitting antennas;Wireless communication;Vector perturbation, vector precoding, limited feedback, MIMO systems, multiuser, broadcast channel, wireless communications.}, 
+doi={10.1109/TCOMM.2009.09.080041}, 
+ISSN={0090-6778},}
 
 @phdthesis{Ryan2008thesis, 
 author = {D. J. Ryan}, 
