--- a/robby.bib
+++ b/robby.bib
@@ -10,6 +10,13 @@
 
 @string{procicassp = {Proc. Internat. Conf. Acoust. Spe. Sig. Process.}}
 
+@inproceedings{Haley_sdr_asrp_winncomm,
+  author = {David Haley and Linda M. Davis and Andre Pollok and Ying Chen and Gottfried Lechner and Marc Lavenant and S. Adrian Barbulescu and John Buetefuer and William G. Cowley and Alex Grant and Terry Kemp and Ingmar Land and Rick Luppino and Robby McKilliam and Hidayat Soetiyono},
+  booktitle = {Wireless Innovation Forum Conference on Communications Technologies and Software Defined Radio},
+  title = {Software Defined Radio based Global Sensor Network Architecture},
+  year = 2014
+}
+
 @inproceedings{6510040,
   author = {Kodithuwakku, J. and Letzepis, N. and Grant, A. and McKilliam, R.},
   booktitle = {Communications Theory Workshop (AusCTW), 2013 Australian},
@@ -69,9 +76,9 @@
 @unpublished{McKilliam_time_offset_pilots_data_2013,
   author = {R. G. McKilliam and A. Pollok and B. Cowley},
   title = {Time offset estimation using pilots and data},
-  note = {submitted to IEEE Transactions on Communications},
-  year = 2013,
-  month = {Mar.}
+  note = {accepted to IEEE Transactions on Communications},
+  year = 2014,
+  month = {Jan.}
 }
 
 @inproceedings{McKilliam_leastsqPSKnoncoICASSP_2012,
@@ -91,14 +98,6 @@
   month = {Aug.},
   pages = {193-196},
   doi = {10.1109/SSP.2012.6319657}
-}
-
-@unpublished{McKilliam_polycrbs_2012,
-  author = {R. G. McKilliam and A. Pollok},
-  title = {On the {C}ram\'{e}r-{R}ao bound for polynomial phase signals},
-  note = {submitted to {IEEE Signal Processing Letters}},
-  year = 2012,
-  month = {Aug}
 }
 
 @inproceedings{McKilliam_short_vectors_first_type_isit_2012,
