--- a/bib.bib
+++ b/bib.bib
@@ -144,6 +144,16 @@ keywords={computational complexity;lattice theory;radiocommunication;signal proc
 doi={10.1109/MSP.2010.938758}, 
 ISSN={1053-5888},}
 
+
+@article{Kendall_Le_int_mean_non_iid,
+title={Limit theorems for empirical Fréchet means of independent and non-identically distributed manifold-valued random variables},
+journal={Brazilian Journal of Probability and Statistics},
+volume=25,
+number=3,
+year=2011,
+pages={237-470}
+}
+
 @ARTICLE{Viterbo_SLB_fadinglattice_const_2008,
 title={Sphere Lower Bound for Rotated Lattice Constellations in Fading Channels},
 author={A. Guill\'{e}n i F\`{a}bregas and E. Viterbo},
@@ -155,6 +165,64 @@ number=3,
 pages={825-830}
 }
 
+@incollection{book_sphere_free_number_theory_1990,
+year=1990,
+isbn={978-0-8176-3481-0},
+booktitle={Analytic Number Theory},
+volume=85,
+series={Progress in Mathematics},
+doi={10.1007/978-1-4612-3464-7_15},
+title={On Gaps between Squarefree Numbers},
+publisher={Birkhäuser Boston},
+author={Filaseta, Michael and Trifonov, Ognian},
+pages={235-253},
+language={English}
+}
+
+@book{Senchal_Quasicrystals_and_geometry_1995,
+title={Quasicrystals and geometry},
+author={Senechal, M.},
+publisher=cup,
+year=1995
+}
+
+@article{Lagarias_repetetive_delone_sets,
+author={J. C. Lagarias, P. A. B. Pleasants},
+title={Repetitive {Delone} Sets and Quasicrystals},
+journal={Ergodic Theory and Dynamical Systems},
+year=2003,
+volume=23,
+pages={831-867}
+}
+
+@article{Baake20003,
+title = "Diffraction from visible lattice points and kth power free integers ",
+journal = "Discrete Mathematics ",
+volume = 221,
+number = "1–3",
+pages = "3 - 42",
+year = 2000,
+issn = "0012-365X",
+doi = "http://dx.doi.org/10.1016/S0012-365X(99)00384-2",
+url = "http://www.sciencedirect.com/science/article/pii/S0012365X99003842",
+author = "M. Baake and R. V. Moody and P. A.B. Pleasants"
+}
+
+
+@Article{sym4040566,
+AUTHOR = {Baake, M. and Grimm, U.},
+TITLE = {On the Notions of Symmetry and Aperiodicity for {Delone} Sets},
+JOURNAL = {Symmetry},
+VOLUME = 4,
+YEAR = 2012,
+NUMBER = 4,
+PAGES = {566--580},
+URL = {http://www.mdpi.com/2073-8994/4/4/566},
+ISSN = {2073-8994},
+DOI = {10.3390/sym4040566}
+}
+
+
 @ARTICLE{Hernandez_rbf_phase_unwrapping_2009,
 title={Radial basis functions for phase unwrapping},
 author={J. V. Hern\'{a}ndez and I. de la Rosa Vargas and E. de la Rosa Miranda},
@@ -162,6 +230,21 @@ journal={Computación y Sistemas},
 year=2010,
 volume=14,
 number=2
+}
+
+@article{PhysRevLett.53.1951,
+  title = {Metallic Phase with Long-Range Orientational Order and No Translational Symmetry},
+  author = {Shechtman, D. and Blech, I. and Gratias, D. and Cahn, J. W.},
+  journal = {Phys. Rev. Lett.},
+  volume = 53,
+  issue = 20,
+  pages = {1951--1953},
+  numpages = 0,
+  year = 1984,
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.53.1951},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.53.1951}
 }
 
 @misc{ASRPpromovideo,
@@ -222,6 +305,13 @@ title={Algebraic Number Theory and Code Design For Rayleigh Fading Channels},
 series={Foundations and Trends in Communications and Information Theory}, 
 publisher={Now Publishers Inc}, 
 year=2004
+}
+
+@INPROCEEDINGS{Haley_sdr_asrp_winncomm, 
+author={David Haley and Linda M. Davis and Andre Pollok and Ying Chen and Gottfried Lechner and Marc Lavenant and S. Adrian Barbulescu and John Buetefuer and William G. Cowley and Alex Grant and Terry Kemp and Ingmar Land and Rick Luppino and Robby McKilliam and Hidayat Soetiyono}, 
+booktitle={Wireless Innovation Forum Conference on Communications Technologies and Software Defined Radio}, 
+title={Software Defined Radio based Global Sensor Network Architecture}, 
+year=2014, 
 }
 
 @INPROCEEDINGS{6510040, 
@@ -1384,7 +1474,22 @@ pages={13-30}
 title={Intrinsic Means on the Circle: Uniqueness, Locus and Asymptotics},
 author={T. Hotz and S. Huckemann},
 note={http://arxiv.org/abs/1108.2141},
-year={2011}
+year=2011
+}
+
+@incollection{Hotz_extr_int_circle_2013,
+year={2013},
+isbn={978-3-642-40019-3},
+booktitle={Geometric Science of Information},
+volume={8085},
+series={Lecture Notes in Computer Science},
+editor={Nielsen, Frank and Barbaresco, Frédéric},
+doi={10.1007/978-3-642-40020-9_47},
+title={Extrinsic vs Intrinsic Means on the Circle},
+url={http://dx.doi.org/10.1007/978-3-642-40020-9_47},
+publisher={Springer Berlin Heidelberg},
+author={Hotz, Thomas},
+pages={433-440}
 }
 
 
@@ -4182,9 +4287,9 @@ month={Jan.}
 @unpublished{McKilliam_time_offset_pilots_data_2013,
 author={R. G. McKilliam and A. Pollok and B. Cowley},
 title={Time offset estimation using pilots and data},
-note={submitted to IEEE Transactions on Communications},
-year=2013,
-month={Mar.}
+note={accepted to IEEE Transactions on Communications},
+year=2014,
+month={Jan.}
 }
 
 @INPROCEEDINGS{McKilliam_leastsqPSKnoncoICASSP_2012,
@@ -4234,14 +4339,6 @@ pages={1224-1229},
 keywords={Wiener filters;channel estimation;error statistics;fading channels;iterative methods;least mean squares methods;signal sampling;splines (mathematics);B-splines;BER;MMSE;Wiener filter;cubic local splines;fast flat fading channels;integral sampling;iterative channel estimation;minimum mean square error;sampling interval;signal-to-noise ratio;spheroidal basis expansion;spline order;Bit error rate;Channel estimation;Fading;Frequency estimation;Mean square error methods;Polynomials;Sampling methods;Signal to noise ratio;Spline;Wiener filter}, 
 doi={10.1109/TWC.2007.348317}, 
 ISSN={1536-1276},}
-
-@unpublished{McKilliam_polycrbs_2012,
-author={R. G. McKilliam and A. Pollok},
-title={On the {C}ram\'{e}r-{R}ao bound for polynomial phase signals},
-note={submitted to {IEEE Signal Processing Letters}},
-year=2012,
-month={Aug},
-}
 
 @INPROCEEDINGS{McKilliam_short_vectors_first_type_isit_2012, 
 author={R. G. McKilliam and A. Grant}, 
