--- a/robby.bib
+++ b/robby.bib
@@ -75,7 +75,7 @@
 
 @unpublished{McKilliam_time_offset_pilots_data_2013,
   author = {R. G. McKilliam and A. Pollok and B. Cowley},
-  title = {Time offset estimation using pilots and data},
+  title = {Simultaneous symbol timing and frame synchronization for phase shift keying},
   note = {accepted to IEEE Transactions on Communications},
   year = 2014,
   month = {Jan.}
