minor bib additions

--- a/bib.bib
+++ b/bib.bib
@@ -5520,6 +5520,15 @@ year = 1980,
     url = {http://www.springerlink.com/content/NLPVWG4159322516},
     file = {Yokoyama_moment_bound_stat_proc_1980.pdf}
     }
+
+@unpublished{McKilliam_pps_unwrapping_tsp_2014,
+author={R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
+title={Polynomial phase estimation by least squares phase unwrapping},
+notes={accepted to IEEE Trans. Signal Processing},
+year={2014},
+month={Jan.}
+}
+
     
 @article{McKilliam_arxiv_pps_unwrapping_2012,
 author={R. G. McKilliam and B. G. Quinn and  I. V. L. Clarkson and B. Moran and B. N. Vellambi},
